<resources>
    <string name="app_name">KotlinMVP</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="register_here_">Register Here</string>
    <string name="login">Login</string>
    <string name="login_now">Login Now</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="after_successfully_your_application_we_provide_login_credentials_on_email_sms_from_easy_paisa_team">After Successfully Your Application we provide login credentials on Email/SMS from Easy Paisa Team.</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="pin_code">PIN Code</string>
    <string name="shop_name">Shop Name</string>
    <string name="pan_number">PAN Number</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="login_here">Login here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="easy_paisa">Easy Paisa</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="account">Account</string>
    <string name="transactions">Transactions</string>
    <string name="yes_aeps">Yes AePS</string>
    <string name="icici_aeps">ICICI AePS</string>
    <string name="fino_aeps">Fino AePS</string>
    <string name="micro_atm">Micro Atm</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="electricity">Electricity</string>
    <string name="mobile">Mobile</string>
    <string name="dth">DTH</string>
    <string name="data_card">Datacard</string>
    <string name="other_services">Other Services</string>
    <string name="uti_pancard">Uti Pancard</string>
    <string name="insurance">Insurance</string>
    <string name="no_internet_message">No internet connection, Please check your internet connection</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="withdraw">Withdraw</string>
    <string name="balance_info">Balance Info</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="select_bank">Select Bank</string>
    <string name="enter_aadhaar_number">Enter Aadhaar Number</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="i_accept">I accept</string>
    <string name="term_condition"><![CDATA[Term & Condition]]></string>
    <string name="proceed">Proceed</string>
    <string name="ser_withdraw">ser_withdraw</string>
    <string name="ser_balance">ser_balance</string>
    <string name="yes_aeps_icici_ep">I-AePS</string>
    <string name="aeps">AePS</string>
    <string name="invalid_monile_number">Invalide Mobile number</string>
    <string name="enter_min_amount_">Please enter minimum 100 rupees to max 10000 rupees</string>
    <string name="wallets">Wallets</string>
    <string name="load_wallet">Load Wallet</string>
    <string name="no_internet_connection_please_check_internet_connection">No Internet connection, Please check internet connection</string>
    <string name="retry">Retry</string>
    <string name="complete_your_kyc">Complete your KYC</string>
    <string name="after_successfully_kyc_completion_you_can_use_our_service">After successfully KYC completion you can use our service</string>
    <string name="select_pan_card">Select PAN Card</string>
    <string name="pan_card_picture">PAN card picture</string>
    <string name="aadhaar_card_picture">Aadhaar Card picture</string>
    <string name="select_aadhaar_card">Select Aadhaar card</string>
    <string name="proceed_for_kyc">Proceed for KYC</string>
    <string name="choose_selection_type">Choose Selection type</string>
    <string name="provide_permission_camera">Provide permission to access camera to capture image</string>
    <string name="provide_permission_storage">Provice storage permission to access gallery</string>
</resources>
